--- a/conf/nginx-site.conf
+++ b/conf/nginx-site.conf
@@ -7,7 +7,7 @@ server {
 
 	# Make site accessible from http://localhost/
 	server_name _;
-	
+
 	# Disable sendfile as per https://docs.vagrantup.com/v2/synced-folders/virtualbox.html
 	sendfile off;
 
@@ -19,54 +19,38 @@ server {
         #real_ip_header X-Forwarded-For;
         #set_real_ip_from 172.16.0.0/12;
 
-	location / {
-		# First attempt to serve request as file, then
-		# as directory, then fall back to index.html
-		try_files $uri $uri/ =404;
-	}
+    location / {
+	# First attempt to serve request as file, then
+	# as directory, then fall back to index.html
+        try_files $uri $uri/ /index.php?$query_string;
+    }
 
-	error_page 404 /404.html;
-        location = /404.html {
-                root /var/www/errors;
-                internal;
-        }
+    # pass the PHP scripts to FastCGI server listening on socket
+    #
+    location ~ \.php$ {
+        try_files $uri =404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass unix:/var/run/php-fpm.sock;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+        fastcgi_index index.php;
+        include fastcgi_params;
+    }
 
-        location ^~ /ngd-style.css {
-            alias /var/www/errors/style.css;
-            access_log off;
-        }
+    location ~* \.(jpg|jpeg|gif|png|css|js|ico|xml)$ {
+        expires           5d;
+    }
 
-        location ^~ /ngd-sad.svg {
-            alias /var/www/errors/sad.svg;
-            access_log off;
-        }
+    # deny access to . files, for security
+    #
+    location ~ /\. {
+        log_not_found off;
+        deny all;
+    }
 
-	# pass the PHP scripts to FastCGI server listening on socket
-	#
-	location ~ \.php$ {
-                try_files $uri =404;
-		fastcgi_split_path_info ^(.+\.php)(/.+)$;
-		fastcgi_pass unix:/var/run/php-fpm.sock;
-		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    		fastcgi_param SCRIPT_NAME $fastcgi_script_name;
-		fastcgi_index index.php;
-		include fastcgi_params;
-	}
-
-        location ~* \.(jpg|jpeg|gif|png|css|js|ico|xml)$ {
-                expires           5d;
-        }
-
-	# deny access to . files, for security
-	#
-	location ~ /\. {
-    		log_not_found off; 
-    		deny all;
-	}
-        
-	location ^~ /.well-known {
-                allow all;
-                auth_basic off;
-        }
+    location ^~ /.well-known {
+        allow all;
+        auth_basic off;
+    }
 
 }
